First work on introduction & datasets

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,3 +1,27 @@
+@misc{10.48550/ARXIV.1706.02216,
+  doi = {10.48550/ARXIV.1706.02216},
+  url = {https://arxiv.org/abs/1706.02216},
+  author = {Hamilton, William L. and Ying, Rex and Leskovec, Jure},
+  keywords = {Social and Information Networks (cs.SI), Machine Learning (cs.LG), Machine Learning (stat.ML), FOS: Computer and information sciences, FOS: Computer and information sciences},
+  title = {Inductive Representation Learning on Large Graphs},
+  publisher = {arXiv},
+  year = {2017},
+  copyright = {arXiv.org perpetual, non-exclusive license}
+}
+
+@misc{10.48550/ARXIV.1704.01212,
+  doi = {10.48550/ARXIV.1704.01212},
+  url = {https://arxiv.org/abs/1704.01212},
+  author = {Gilmer, Justin and Schoenholz, Samuel S. and Riley, Patrick F. and Vinyals, Oriol and Dahl, George E.},
+  keywords = {Machine Learning (cs.LG), FOS: Computer and information sciences, FOS: Computer and information sciences, I.2.6},
+  title = {Neural Message Passing for Quantum Chemistry},
+  publisher = {arXiv},
+  year = {2017},
+  copyright = {arXiv.org perpetual, non-exclusive license}
+}
+
+
+
 @article{DBLP:journals/corr/abs-2003-03123,
   author    = {Johannes Klicpera and
                Janek Gro{\ss} and
@@ -204,37 +228,23 @@ eprint = {
 
 @misc{https://doi.org/10.48550/arxiv.2206.08917,
   doi = {10.48550/ARXIV.2206.08917},
-  
   url = {https://arxiv.org/abs/2206.08917},
-  
   author = {Tran, Richard and Lan, Janice and Shuaibi, Muhammed and Goyal, Siddharth and Wood, Brandon M. and Das, Abhishek and Heras-Domingo, Javier and Kolluru, Adeesh and Rizvi, Ammar and Shoghi, Nima and Sriram, Anuroop and Ulissi, Zachary and Zitnick, C. Lawrence},
-  
   keywords = {Materials Science (cond-mat.mtrl-sci), Machine Learning (cs.LG), Computational Physics (physics.comp-ph), FOS: Physical sciences, FOS: Physical sciences, FOS: Computer and information sciences, FOS: Computer and information sciences},
-  
   title = {The Open Catalyst 2022 (OC22) Dataset and Challenges for Oxide Electrocatalysis},
-  
   publisher = {arXiv},
-  
   year = {2022},
-  
   copyright = {arXiv.org perpetual, non-exclusive license}
 }
 
 @misc{https://doi.org/10.48550/arxiv.2011.14115,
   doi = {10.48550/ARXIV.2011.14115},
-  
   url = {https://arxiv.org/abs/2011.14115},
-  
   author = {Gasteiger, Johannes and Giri, Shankari and Margraf, Johannes T. and Günnemann, Stephan},
-  
   keywords = {Machine Learning (cs.LG), Chemical Physics (physics.chem-ph), Computational Physics (physics.comp-ph), FOS: Computer and information sciences, FOS: Computer and information sciences, FOS: Physical sciences, FOS: Physical sciences},
-  
   title = {Fast and Uncertainty-Aware Directional Message Passing for Non-Equilibrium Molecules},
-  
   publisher = {arXiv},
-  
   year = {2020},
-  
   copyright = {arXiv.org perpetual, non-exclusive license}
 }
 
