--- a/content/project_organization.tex
+++ b/content/project_organization.tex
@@ -1,4 +1,5 @@
-\section*{Project Organization}
+\section{Project Organization}
+\label{section:project_organization}
 
 All work in this project was realized within the TUM Data Innovation Lab in collaboration with the Chair of 
 Aerodynamics and Fluid Mechanics. Special thanks go to our Scientific Lead PhD candidate Ludger Paehler, 
@@ -10,7 +11,8 @@ Our project was structured in 4 phases:
     \item \textit{Literature review (4 weeks)}: We read through important papers in the topics of our project such 
     as Graph Learning, Graph Neural Networks, Graph Sampling, Message Passing for Quantum Chemistry, 
     and Scalable Machine Learning, and discussed them weekly.
-    \item \textit{Baseline formulation (3 weeks)}: 
+    \item \textit{Baseline (3 weeks)}: After getting into the topic theoretically, we started looking at the OCP 
+    project and elaborating the current state of the project to see what baseline we are comparing against.
     \item \textit{Implementation (4 weeks)}: After defining the baseline, we integrated and tested all deepspeed 
     stages in the OCP project during our implementation phase.
     \item \textit{Evaluation and Final report (3 weeks)}: In the final weeks of the project, we conducted baselines 
