--- a/final-report.tex
+++ b/final-report.tex
@@ -82,6 +82,8 @@
 
     \input{./content/evaluation/datasets.tex}
 
+    \input{./content/related_work.tex}
+
     \input{./content/project_organization.tex}
 
     \input{./content/conclusion.tex}
