--- a/bibliography.bib
+++ b/bibliography.bib
@@ -248,6 +248,51 @@ eprint = {
   copyright = {arXiv.org perpetual, non-exclusive license}
 }
 
+@misc{10.48550/ARXIV.1710.10903,
+  doi = {10.48550/ARXIV.1710.10903},
+
+  url = {https://arxiv.org/abs/1710.10903},
+
+  author = {Veličković, Petar and Cucurull, Guillem and Casanova, Arantxa and Romero, Adriana and Liò, Pietro and Bengio, Yoshua},
+
+  keywords = {Machine Learning (stat.ML), Artificial Intelligence (cs.AI), Machine Learning (cs.LG), Social and Information Networks (cs.SI), FOS: Computer and information sciences, FOS: Computer and information sciences},
+  
+  title = {Graph Attention Networks},
+  
+  publisher = {arXiv},
+  
+  year = {2017},
+
+  copyright = {arXiv.org perpetual, non-exclusive license}
+}
+
+@misc{10.48550/ARXIV.1909.01315,
+  doi = {10.48550/ARXIV.1909.01315},
+  
+  url = {https://arxiv.org/abs/1909.01315},
+  
+  author = {Wang, Minjie and Zheng, Da and Ye, Zihao and Gan, Quan and Li, Mufei and Song, Xiang and Zhou, Jinjing and Ma, Chao and Yu, Lingfan and Gai, Yu and Xiao, Tianjun and He, Tong and Karypis, George and Li, Jinyang and Zhang, Zheng},
+  
+  keywords = {Machine Learning (cs.LG), Machine Learning (stat.ML), FOS: Computer and information sciences, FOS: Computer and information sciences},
+  
+  title = {Deep Graph Library: A Graph-Centric, Highly-Performant Package for Graph Neural Networks},
+  
+  publisher = {arXiv},
+  
+  year = {2019},
+  
+  copyright = {arXiv.org perpetual, non-exclusive license}
+}
+
+
+@inproceedings{Fey2019,
+  title={Fast Graph Representation Learning with PyTorch Geometric},
+  author={Fey, Matthias and Lenssen, Jan E.},
+  booktitle={ICLR Workshop on Representation Learning on Graphs and Manifolds},
+  year={2019},
+}
+
+
 
 
 
