--- a/content/evaluation/datasets.tex
+++ b/content/evaluation/datasets.tex
@@ -8,16 +8,28 @@ structure relaxation.
 
 \subsubsection{Initial Structure to Relaxed Energy (IS2RE)}
 
-Initial Structure to Relaxed Energy (IS2RE) takes an initial structure as input and 
-predicts the relaxed energy \cite*{Chanussot_2021, https://doi.org/10.48550/arxiv.2206.08917}.
+The Initial Structure to Relaxed Energy (IS2RE) tasks takes an initial atomic 
+structure as input and predicts the energy after relaxtion of the structure 
+\cite*{Chanussot_2021, https://doi.org/10.48550/arxiv.2206.08917}. 
+
 
 OC20 provides three dataset scaling factors for the IS2RE task: 10k, 100k and 
-all structures + relaxations.
+all structures + relaxations. Each dataset is a subset of the next higher-scaled 
+dataset.
 
 \subsubsection{Structure to Energy and Forces (S2EF)}
 
-Structure to Energy and Forces (S2EF) takes a structure and predicts energy and 
-per-atom forces \cite*{Chanussot_2021, https://doi.org/10.48550/arxiv.2206.08917}. 
+The Structure to Energy and Forces (S2EF) task takes an atomic structure and 
+predicts energy of the structure and per-atom forces 
+\cite*{Chanussot_2021, https://doi.org/10.48550/arxiv.2206.08917}. Four metrics 
+are tracked during the S2EF task: Mean Absolute Error for the energy and forces 
+(MAE), Force Cosine similarity, and energy as well as forces within a threshold 
+(EFwT). 
 
 OC20 provides three dataset scaling factors for the S2EF task: 200k, 2M 20M,  
-all structures + relaxations.
+and all . The scaling factor determines the number of atomic structures and 
+pre-computed energy and per-atom forces with DFT. The input structures are 
+provided as compressed trajectory files, so we had to locally uncrompress the 
+files and embedded the structures into Lightning Memory-Mapped Databases (LMBDs). 
+Similiar to the datasets in IS2RE, each dataset is a subset of the next 
+higher-scaled dataset. 
