--- a/content/related_work.tex
+++ b/content/related_work.tex
@@ -1,2 +1,37 @@
 \section{Related Work}
 \label{section:related_work}
+
+Scaling of machine learning models has a rich scientific research history, mainly since the field 
+represents an interesting and active collaboration between high performance computing, distributed 
+systems, and deep learning communities. So in this section we will highlight literature in the area 
+of accelerating deep learning that are similar to our project or complement our work.
+
+A. Sriram et al. \cite*{https://doi.org/10.48550/arxiv.2203.09697} from Meta FAIR propose a very 
+different approach to scaling Message Parsing Graph Neural Networks for atomic simulations, wherein 
+the automata structures are internally partitioned across multiple GPUs. In their approach, known 
+as graph parallelism, the higher-order interactions, represented in the graph as triplets 
+(two connected edges with associated angles of the connected atoms), are partitioned so that 
+each GPU receives a subset of the triplet and updates and aggregates them locally. The 
+triplet messages are then gathered on all GPUs, allowing subsequent edge and node-level layers 
+to be computed as before. Using Graph Parallelism, the authors scaled up Dimenet++ and Gemnet, 
+referring to their large models as Dimenet++-XL and Gemnet-XL. Gemnet-XL, containing close to 300 
+million model parameters, is the largest known model fully trained on OC20 for the OCP benchmark 
+to date, and was also at the top of the leaderboard for both IS2RE and S2EF until the release of 
+Gemnet-OC. 
+
+For more general porpose Graph Neural Network architectures like Graph Attention Networks 
+\cite*{10.48550/ARXIV.1710.10903} or GraphSAGE \cite*{10.48550/ARXIV.1706.02216}, sampling 
+is mostly used to avoid neighborhood explosions when building the Message Flow Graphs. To also 
+allow training on large-scale graphs, both popular Geometric Deep Learning frameworks PyTorch 
+Geomtric (PyG) \cite*{Fey2019} and Deep Graph Library (DGL) \cite*{10.48550/ARXIV.1909.01315} 
+offer support for scale-out strategies. For PyG, there is Torch Quiver
+\footnote{\url{https://github.com/quiver-team/torch-quiver}}, which optimizes and scales 
+single-node multi-GPU training. In DGL, multi-GPU training and optimizations are directly 
+integrated into the codebase. In first iterations of our project, we evaluated both Quiver 
+on Pytorch Geometric and DGL. In short, Torch Quiver is unfortunately very poorly maintained 
+and currently not useable from our point of view. DGL offers great support for multi-GPU and 
+our tests were very positive, however most atomic simulations models are implemented on top 
+of Pytorch Geomtric. Consequently, we decided against DGL because the effort to reimplement 
+Dimenet, Gemnet, and Gemnet-OC in DGL would have been too costly. 
+
+
