--- a/bibliography.bib
+++ b/bibliography.bib
@@ -250,11 +250,11 @@ eprint = {
 
 @misc{10.48550/ARXIV.1710.10903,
   doi = {10.48550/ARXIV.1710.10903},
-
+  
   url = {https://arxiv.org/abs/1710.10903},
-
-  author = {Veličković, Petar and Cucurull, Guillem and Casanova, Arantxa and Romero, Adriana and Liò, Pietro and Bengio, Yoshua},
-
+  
+  author = {Velickovic, Petar and Cucurull, Guillem and Casanova, Arantxa and Romero, Adriana and Lio, Pietro and Bengio, Yoshua},
+  
   keywords = {Machine Learning (stat.ML), Artificial Intelligence (cs.AI), Machine Learning (cs.LG), Social and Information Networks (cs.SI), FOS: Computer and information sciences, FOS: Computer and information sciences},
   
   title = {Graph Attention Networks},
@@ -262,7 +262,25 @@ eprint = {
   publisher = {arXiv},
   
   year = {2017},
+  
+  copyright = {arXiv.org perpetual, non-exclusive license}
+}
 
+@misc{10.48550/ARXIV.1903.02428,
+  doi = {10.48550/ARXIV.1903.02428},
+  
+  url = {https://arxiv.org/abs/1903.02428},
+  
+  author = {Fey, Matthias and Lenssen, Jan Eric},
+  
+  keywords = {Machine Learning (cs.LG), Machine Learning (stat.ML), FOS: Computer and information sciences, FOS: Computer and information sciences},
+  
+  title = {Fast Graph Representation Learning with PyTorch Geometric},
+  
+  publisher = {arXiv},
+  
+  year = {2019},
+  
   copyright = {arXiv.org perpetual, non-exclusive license}
 }
 
@@ -283,21 +301,6 @@ eprint = {
   
   copyright = {arXiv.org perpetual, non-exclusive license}
 }
-
-
-@inproceedings{Fey2019,
-  title={Fast Graph Representation Learning with PyTorch Geometric},
-  author={Fey, Matthias and Lenssen, Jan E.},
-  booktitle={ICLR Workshop on Representation Learning on Graphs and Manifolds},
-  year={2019},
-}
-
-
-
-
-
-
-
 
 
 
