--- a/figures/gnns/gn_block.tex
+++ b/figures/gnns/gn_block.tex
@@ -155,7 +155,7 @@
     \end{subfigure}
 
     \captionsetup{width=\dimexpr\textwidth-1.5cm\relax}
-    \caption{Schematic depiction of GN block computation phases. 
+    \caption{Schematic depiction of the GN block computation phases. 
     \textcolor{tum-orange}{Orange} attributes are updated or created 
     while \textcolor{tum-dark-blue}{blue} ones contribute to the corresponding 
     update.}
