--- a/content/preliminaries/scalable_ml.tex
+++ b/content/preliminaries/scalable_ml.tex
@@ -7,7 +7,7 @@ performance and accuracy. In this chapter, we will discuss scaling strategies fo
 \subsubsection{Scaling up vs. Scaling out}
 
 Before scaling the training of a machine learning model, the question in which form the scaling should happen has to 
-be answered. There are two fundamental types of scaling: scaling up and scaling down. When only the resources of the 
+be answered. There are two fundamental types of scaling: \textit{scaling up} and \textit{scaling out}. When only the resources of the 
 existing machine, on which the model is trained, are expanded in order to achieve better performance, we speak of 
 scaling up.
 
@@ -17,29 +17,29 @@ several processes presents a way to further scale, whereby the processes can als
 This is known as scaling out. 
 
 A single machine multi-GPU setup is an interesting middle ground between scaling up and scaling out. Although the entire 
-pipeline is executed on only one machine, we still employ a multi process system since each GPUs is used through 
+pipeline is executed on only one machine, we still employ a multi process system since each of the GPUs is used through 
 independent processes.
 
 \subsubsection{Data, Model and Pipeline Parallelism}
 
 In our work, we used a scaling out approach to scale the existing pipelines. Three common scaling-out strategies have emerged 
- in recent years for machine learning models. With a large amount of training data sets, long training on only a single 
- machine becomes unfeasible. To scale the training to multiple devices, Data Parallelism is used to partition and distribute 
- the training data while replicating the model to each machine. Gradients are exchanged across machines after the backward 
- pass, ensuring that all models will be in the same state at optimizer updates. 
+in recent years for machine learning models. With a large amount of training data, long training on only a single 
+machine becomes unfeasible. To scale the training to multiple devices, \textit{data parallelism} is used to partition and distribute 
+the training data while replicating the model on each machine. Gradients are exchanged across machines after the backward 
+pass, ensuring that all models will be in the same state at optimizer updates. 
 
-When the model size exceeds the memory capacities of a single device, Model Parallelism 
+When the model size exceeds the memory capacities of a single device, \textit{model parallelism} 
 \cite*{10.48550/ARXIV.1811.02084, 10.48550/ARXIV.1909.08053} can be used to split model 
-parameters among multiple processes, devices or even machines. The model can be horizontally and vertically partitioned, 
+parameters among multiple processes, devices or even machines. A neural network architecture can be horizontally and vertically partitioned, 
 whereby in horizontal partitioning each device holds different layers of the model and in vertical partitioning layers 
 are cut internally and each device holds a part of each layer.
 
-A disadvantage of the naiive implementation of model parallelism is the sequential execution of forward and backward pass 
+A disadvantage of the na\"ive implementation of model parallelism is the sequential execution of forward and backward passes 
 through the layers. All other machines are forced to wait when a single machine is performing computations, often referred to 
-as bubble overhead in literature. To avoid bubble overhead, a more advanced form of model parallelism known as Pipeline Parallelism
+as bubble overhead in literature. To avoid bubble overhead, a more advanced form of model parallelism known as \textit{pipeline parallelism}
 was developed, in which the model is split horizontally and the communication between layers gets overlapped through micro-batches. 
-Popular implementations of Pipeline Parallelism include G-Pipe \cite*{10.48550/ARXIV.1811.06965} and 
+Popular implementations of pipeline parallelism include G-Pipe \cite*{10.48550/ARXIV.1811.06965} and 
 PipeDream \cite*{10.48550/ARXIV.1806.03377}. G-Pipe pipelines the execution of micro-batches accross machines, 
-effectively overlapping executions of batches during forward and backward pass, while PipeDrean intersperses the execution of 
+effectively overlapping executions of batches during forward and backward passes, while PipeDream intersperses the execution of 
 forward and backward passes thorugh more complex scheduling algorithms. 
 
