Revise DeepSpeed section and connect it with previous Scalable ML section

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -47,23 +47,7 @@
   year = {2021},
   copyright = {Creative Commons Attribution 4.0 International}
 }
-@article{DBLP:journals/corr/abs-1910-02054,
-  author    = {Samyam Rajbhandari and
-               Jeff Rasley and
-               Olatunji Ruwase and
-               Yuxiong He},
-  title     = {ZeRO: Memory Optimization Towards Training {A} Trillion Parameter
-               Models},
-  journal   = {CoRR},
-  volume    = {abs/1910.02054},
-  year      = {2019},
-  url       = {http://arxiv.org/abs/1910.02054},
-  eprinttype = {arXiv},
-  eprint    = {1910.02054},
-  timestamp = {Wed, 09 Oct 2019 14:07:58 +0200},
-  biburl    = {https://dblp.org/rec/journals/corr/abs-1910-02054.bib},
-  bibsource = {dblp computer science bibliography, https://dblp.org}
-}
+
 @misc{https://doi.org/10.48550/arxiv.2203.09697,
   doi = {10.48550/ARXIV.2203.09697},
   url = {https://arxiv.org/abs/2203.09697},
@@ -300,6 +284,46 @@ eprint = {
   year = {2019},
   
   copyright = {arXiv.org perpetual, non-exclusive license}
+}
+
+@article{DBLP:journals/corr/abs-2101-06840,
+  author    = {Jie Ren and
+               Samyam Rajbhandari and
+               Reza Yazdani Aminabadi and
+               Olatunji Ruwase and
+               Shuangyan Yang and
+               Minjia Zhang and
+               Dong Li and
+               Yuxiong He},
+  title     = {ZeRO-Offload: Democratizing Billion-Scale Model Training},
+  journal   = {CoRR},
+  volume    = {abs/2101.06840},
+  year      = {2021},
+  url       = {https://arxiv.org/abs/2101.06840},
+  eprinttype = {arXiv},
+  eprint    = {2101.06840},
+  timestamp = {Mon, 03 May 2021 16:42:27 +0200},
+  biburl    = {https://dblp.org/rec/journals/corr/abs-2101-06840.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{DBLP:journals/corr/abs-2104-07857,
+  author    = {Samyam Rajbhandari and
+               Olatunji Ruwase and
+               Jeff Rasley and
+               Shaden Smith and
+               Yuxiong He},
+  title     = {ZeRO-Infinity: Breaking the {GPU} Memory Wall for Extreme Scale Deep
+               Learning},
+  journal   = {CoRR},
+  volume    = {abs/2104.07857},
+  year      = {2021},
+  url       = {https://arxiv.org/abs/2104.07857},
+  eprinttype = {arXiv},
+  eprint    = {2104.07857},
+  timestamp = {Mon, 19 Apr 2021 16:45:47 +0200},
+  biburl    = {https://dblp.org/rec/journals/corr/abs-2104-07857.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
 
