--- a/content/preliminaries/atomic_simulations/dimenet.tex
+++ b/content/preliminaries/atomic_simulations/dimenet.tex
@@ -85,7 +85,7 @@ The whole DimeNet architecture as depicted in its original paper
 \begin{figure}[H]
     \centering
     \includegraphics[]{atomic_simulations/dimenet.pdf}
-    \caption{The DimeNet architecture \cite*{DBLP:journals/corr/abs-2003-03123}.}
+    \caption{The original DimeNet architecture as depicted in \cite*{DBLP:journals/corr/abs-2003-03123}.}
     \label{fig:dimenet}
 \end{figure}
 
