--- a/content/preliminaries/scalable_ml.tex
+++ b/content/preliminaries/scalable_ml.tex
@@ -21,6 +21,7 @@ pipeline is executed on only one machine, we still employ a multi process system
 independent processes.
 
 \subsubsection{Data, Model and Pipeline Parallelism}
+\label{subsubsec:data-model-pipeline}
 
 In our work, we used a scaling out approach to scale the existing pipelines. Three common scaling-out strategies have emerged 
 in recent years for machine learning models. With a large amount of training data, long training on only a single 
