Minor corrections and add github project link

--- a/content/introduction/introduction.tex
+++ b/content/introduction/introduction.tex
@@ -40,6 +40,7 @@ Our main contributions are:
 \begin{enumerate}
     \item We scaled force and energy predictions in atomic simulations of catalysts with Graph Neural Networks 
     by integrating Microsoft Deepspeed into the Open Catalyst Project.
+    \footnote{\url{https://github.com/TUM-DI-Lab-Graph-Scaling/ocp}}
     \item We evaluated the effectiveness of Deepspeed features, in particular the Zero Redundancy Optimizer, on 
     real-world graph models in contrast to only applying it to large-scale transformer models.
     \item We developed a profiling module for the OCP codebase to allow deeper investigations of CPU/GPU memory 
