--- a/content/preliminaries/ocp.tex
+++ b/content/preliminaries/ocp.tex
@@ -7,12 +7,12 @@ be used or modified in catalysis is very large and modeling of materials during 
 complex and compute-intensive.
 
 In recent years, machine learning methods and in particular GNNs have shown great success in 
-catalyst discovery: Being able to effeciently and accurately predict the 
+catalyst discovery: Being able to efficiently and accurately predict the 
 forces and energy of inorganic and organic interfaces for use in catalysis avoids the 
 computational bottlenecks of traditional simulation tools (see \ref{subsubsec:atomic-simulations-general}). 
 
 The Open Catalyst Project \cite*{Chanussot_2021} is a joint effort by Facebook AI and Carnegie Mellon 
-University's Department of Chemical Engineering that was launched in 2020 and 
+University's Department of Chemical Engineering which was launched in 2020 and 
 aims to provide a unified dataset and baseline models for predicting forces and energy in molecular 
 simulations of catalysts. The project provides the Open Catalyst 2020 (OC20) dataset, which contains 
 1.2 million relaxations of molecular adsorptions onto surfaces simulated with DFT. Fundamentally this 
